# CircuitPython_RM3100

./: .gitignore  README.rst  pyproject.toml  requirements.txt  rm3100.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: rm3100_i2c_test.py  rm3100_simpletest.py  rm3100_spi_async.py  rm3100_spi_test.py
